# calcy

./: LICENSE  README.md  calcy.cabal
src/: Calc.hs  Parser.hs  Shunt.hs  Stack.hs  Tokens.hs  VM.hs  VMErrors.hs
test/: CalcySpec.hs  ParserSpec.hs  ShuntSpec.hs  StackSpec.hs  VMSpec.hs
